added some descriptions

--- a/content/blog/post-2020-11-19T15:30:44Z.md
+++ b/content/blog/post-2020-11-19T15:30:44Z.md
@@ -10,6 +10,7 @@ categories:
 - "Middleware"
 tags:
 - "Quarkus"
+description: "There are a number of technologies driving Java into the cloud-native future, but one of the most promising is Quarkus, a framework for building Kubernetes-native Java applications."
 type: "post"
 external: "https://www.redhat.com/en/blog/introducing-quarkus-red-hat-openshift"
 ---
