updated descriptions on posts

--- a/content/blog/post-2020-12-18T09:38:06Z.md
+++ b/content/blog/post-2020-12-18T09:38:06Z.md
@@ -6,6 +6,10 @@ date: 2020-12-18
 draft: false
 author: "Mark Roberts"
 image: "https://i.ytimg.com/vi/bl0r-mVqLpk/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLC9LrjFlCj8SpHyuT_XxLTbzApS5A"
+
+# meta description
+description: "Fom one of the Red Hat Tech Talks, a 15 min brief on why and how to run serverless code in Kubernetes on Openshift."
+
 categories:
 - "Openshift"
 tags:
