--- a/content/blog/post-2020-12-18T09:39:27Z.md
+++ b/content/blog/post-2020-12-18T09:39:27Z.md
@@ -6,6 +6,10 @@ date: 2020-12-18
 draft: false
 author: "Phil Prosser"
 image: "https://i.ytimg.com/vi/dHLJc8OajOg/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAW6e9p4nJRyXPFoegs9Pih_xGLLQ"
+
+# meta description
+description: "Lightning quick Quarkus overview, packed with everything to get you in the know about the awesome Quarkus Java framework!"
+
 categories:
 - "Languages"
 tags:
