--- a/content/blog/post-2020-12-18T09:42:20Z.md
+++ b/content/blog/post-2020-12-18T09:42:20Z.md
@@ -6,6 +6,10 @@ date: 2020-12-18
 draft: false
 author: "Ian Lawson"
 image: "https://i.ytimg.com/vi/eEzzZJh3uiI/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLDQ4Tn9SOosiuArwjw4mvfyCIGC5w"
+
+# meta description
+description: "Fom one of the Red Hat Tech Talks, a 15 min brief on the open source data science runtime project Open Data Hub. Running Juypiter Hub and a host of other AI/ML tools on Openshift"
+
 categories:
 - "Openshift"
 tags:
