fixed tagging in some posts

--- a/content/blog/post-2020-12-18T09:39:27Z.md
+++ b/content/blog/post-2020-12-18T09:39:27Z.md
@@ -13,7 +13,9 @@ description: "Lightning quick Quarkus overview, packed with everything to get yo
 categories:
 - "Languages"
 tags:
-- "Quarkus;Java"
+- "Quarkus"
+- "Java"
+
 type: "post"
 external: "https://www.youtube.com/watch?v=dHLJc8OajOg"
 ---
