--- a/content/blog/post-2020-12-18T09:42:20Z.md
+++ b/content/blog/post-2020-12-18T09:42:20Z.md
@@ -13,7 +13,11 @@ description: "Fom one of the Red Hat Tech Talks, a 15 min brief on the open sour
 categories:
 - "Openshift"
 tags:
-- "Juypiter Hub;DataScience;Open Data Hub;Tensorflow"
+- "Juypiter Hub"
+- "DataScience"
+- "Open Data Hub"
+- "Tensorflow"
+
 type: "post"
 external: "https://www.youtube.com/watch?v=eEzzZJh3uiI"
 ---
