--- a/content/blog/post-2020-12-18T09:38:06Z.md
+++ b/content/blog/post-2020-12-18T09:38:06Z.md
@@ -13,7 +13,10 @@ description: "Fom one of the Red Hat Tech Talks, a 15 min brief on why and how t
 categories:
 - "Openshift"
 tags:
-- "Serverless;Openshift;KNative"
+- "Serverless"
+- "Openshift"
+- "KNative"
+
 type: "post"
 external: "https://www.youtube.com/watch?v=bl0r-mVqLpk"
 ---
