added description and moved to featured

--- a/content/blog/post-2021-01-06T14:27:48Z.md
+++ b/content/blog/post-2021-01-06T14:27:48Z.md
@@ -10,6 +10,8 @@ categories:
 - "Openshift"
 tags:
 - "Openshift"
-type: "post"
+type: "featured"
 external: "https://openshift-ireland.com/blog/post-5/"
+# meta description
+description: "The first Openshift Ireland User Group meeting of the year is scheduled for 19th January 2021, follow the link here to register! Talk 1: Secure Continuous Delivery with Podman, Buildah, Skopeo and UBI. Talk 2: What's coming Openshift 4.7"
 ---
