--- a/content/blog/post-2021-01-07T22:33:13Z.md
+++ b/content/blog/post-2021-01-07T22:33:13Z.md
@@ -12,4 +12,6 @@ tags:
 - "camelk"
 type: "post"
 external: "https://itnext.io/smart-developers-dont-code-2bf882568c37"
+# meta description
+description: "Just because you are building microservices doesn't mean you need to build microservices! A story of using tools like CamelK instead of writing code."
 ---
