--- a/content/blog/post-2021-01-08T14:45:06Z.md
+++ b/content/blog/post-2021-01-08T14:45:06Z.md
@@ -12,4 +12,7 @@ tags:
 - "Git;Asciidoc"
 type: "post"
 external: "https://james-read.medium.com/auto-build-and-host-pretty-html-documentation-using-asciidoc-github-pages-github-actions-758a03f93d7d"
+# meta description
+description: "User-friendly documentation is probably more important to your project than the code you write. AsciiDoc and GitHub combined can make publishing documentation much easier.":
+
 ---
