added uth comments

--- a/content/blog/post-2021-01-14T11:37:39Z.md
+++ b/content/blog/post-2021-01-14T11:37:39Z.md
@@ -12,4 +12,7 @@ tags:
 - "knative openshift developerfriendly"
 type: "post"
 external: "https://devepiphany.org/2021/01/12/fun-with-knative-part-1/"
+
+# meta description
+description: "The first of a number of fun tech blog posts, this covers an introduction to the mechanics behind Knative 'Serverless' apps in OpenShift"
 ---
