--- a/content/blog/post-2021-05-19T13:50:33+01:00.md
+++ b/content/blog/post-2021-05-19T13:50:33+01:00.md
@@ -1,4 +1,4 @@
-Red Hat Summit Part 2
+title: Red Hat Summit Part 2
 
 date: 2021-19-05
 
@@ -22,4 +22,11 @@ type: "featured"
 # Blog Post
 
 Red Hat Summit part 1 was awesome, [catch up on demand and sign up for Summit part 2)[https://www.redhat.com/en/summit] on 15-16 June! 
+        
+        
+--- 
+
+
+
+
         
