--- a/content/blog/post-2021-05-19T13:50:33+01:00.md
+++ b/content/blog/post-2021-05-19T13:50:33+01:00.md
@@ -1,7 +1,7 @@
 ---
 title: Red Hat Summit Part 2
 
-description: Red Hat Summit part 1 was awesome, (catch up on demand and sign up for Summit part 2)[https://www.redhat.com/en/summit] on 15-16 June!
+description: Red Hat Summit part 1 was awesome, [catch up on demand and sign up for Summit part 2](https://www.redhat.com/en/summit) on 15-16 June!
 
 date: 2021-19-05
 
@@ -24,7 +24,7 @@ type: "featured"
 
 # Blog Post
 
-Red Hat Summit part 1 was awesome, (catch up on demand and sign up for Summit part 2)[https://www.redhat.com/en/summit] on 15-16 June! 
+Red Hat Summit part 1 was awesome, [catch up on demand and sign up for Summit part 2](https://www.redhat.com/en/summit) on 15-16 June! 
         
         
 --- 
